# rust-app-template

./: .bazelrc  .dockerignore  .env.example  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  MODULE.bazel  README.md  ROADMAP.md  Tiltfile  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  mutants.yml
.sqlx/: query-a624b3401eb7cc8c93e60d27f90cbf7b38bf696ee1eb7b98a8150b52ae271c77.json  query-e0069e87c5fa3cc1229038f1146067a5b93a7de6d089897c2e0ea3180f65883d.json  query-ff9c57f7a2beec474b1aabe0fb923ace13a425837482c41159aa5a074160f8e7.json
docs/: ADDING-ADAPTERS.md  ARCHITECTURE.md  RATIONALE.md
docs/implementation-plans/phase8-gaps/: iteration-1.md
frontend/: BUILD.bazel  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.ts  types.ts
k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  postgres-service.yaml  postgres-statefulset.yaml  service.yaml
k8s/overlays/local/: kustomization.yaml
migrations/: 0001_notes.sql
scripts/: bulk-rename.sh  clean-examples.sh  dev.sh  doctor.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  pg_notes.rs  static_greeter.rs
src/domain/: mod.rs
src/http/: error.rs  greet.rs  mod.rs  notes.rs
src/ports/: greeting.rs  mod.rs  notes.rs
tests/: BUILD.bazel  api.rs  integration_db.rs  properties.rs
tests/support/: mod.rs
