load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

rust_library(
    name = "lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_name = "rust_app_template",
    crate_root = "src/lib.rs",
    edition = "2021",
    rustc_env = {"SQLX_OFFLINE": "true"},
    compile_data = glob([".sqlx/**/*.json", "migrations/*.sql"], allow_empty = True) + ["//frontend:dist"],
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_library(
    name = "lib_with_test_helpers",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_name = "rust_app_template",
    crate_root = "src/lib.rs",
    edition = "2021",
    rustc_env = {"SQLX_OFFLINE": "true"},
    compile_data = glob([".sqlx/**/*.json", "migrations/*.sql"], allow_empty = True) + ["//frontend:dist"],
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    crate_features = ["test-helpers"],
)

rust_binary(
    name = "app",
    srcs = ["src/main.rs"],
    crate_root = "src/main.rs",
    edition = "2021",
    compile_data = ["//frontend:dist"],
    deps = [
        ":lib",
        "@crates//:anyhow",
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
