[package]
name = "rust_app_template"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Hexagonal HTTP service template"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum-test = "17"
