load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "src",
    srcs = glob(["src/**/*.ts"]),
    tsconfig = "tsconfig.json",
    declaration = False,
    source_map = False,
    transpiler = "tsc",
    deps = [
        ":node_modules/neverthrow",
        ":node_modules/type-fest",
    ],
)

filegroup(
    name = "dist",
    srcs = glob(["dist/**/*"]),
)

js_binary(
    name = "lint",
    entry_point = ":node_modules/eslint/bin/eslint.js",
    args = ["src", "--config", "eslint.config.js"],
    chdir = package_name(),
    data = glob(["src/**/*", "eslint.config.js"]) + [
        ":node_modules/eslint",
        ":node_modules/@typescript-eslint/parser",
        ":node_modules/@typescript-eslint/eslint-plugin",
    ],
)
