load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# TypeScript compilation and type-checking handled via pnpm build and pnpm typecheck.
# TypeScript is compiled to dist/ which is embedded in the Rust binary via rust-embed.
# Bazel does not perform the TypeScript build step; that is done in the pnpm build path.
# See docs/RATIONALE.md for architecture rationale.

# Phase 5 plan: pre-built frontend dist, not hermetic in Bazel.
# pnpm build populates this directory; Bazel consumes it via rust-embed.
# See docs/RATIONALE.md for architecture rationale.
filegroup(
    name = "dist",
    srcs = glob(["dist/**/*"]),
)
