load("@rules_rust//rust:defs.bzl", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_test(
    name = "api",
    srcs = [
        "api.rs",
        "support/mod.rs",
    ],
    crate_root = "api.rs",
    edition = "2021",
    deps = [
        "//:lib",
        "@crates//:axum",
        "@crates//:axum-test",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)
