load("@rules_rust//rust:defs.bzl", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_test(
    name = "api",
    srcs = [
        "api.rs",
        "support/mod.rs",
    ],
    crate_root = "api.rs",
    edition = "2021",
    deps = [
        "//:lib",
        "@crates//:axum",
        "@crates//:axum-test",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

rust_test(
    name = "properties",
    srcs = ["properties.rs"],
    crate_root = "properties.rs",
    edition = "2021",
    deps = [
        "//:lib",
        "@crates//:proptest",
        "@crates//:tokio",
    ],
)
